<resources>
    <string name="app_name">Sync_n_Serve</string>

    <string name="user_name">UserName</string>
    <string name="form_username">User Name</string>
    <string name="form_email">Email ID</string>
    <string name="form_phone">Phone No</string>
    <string name="form_password">Password</string>
    <string name="already_member">I am already a member.</string>
    <string name="new_member">New Here ? Sign up instead.</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid gmail</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="ageerror">Age must be 14 or older</string>
    <string name="joberror">Please select a job</string>
    <string name="organization_name">organization name</string>
    <string name="organization_email">organization email</string>
    <string name="organization_password">password</string>
    <string name="organization_location">location</string>
    <string name="organization_mission">about mission</string>
    <string name="organization_contact">organization contact</string>
    <string name="mission">This field cannot be empty </string>

    <string name="passworderror">The password must contain at least 8 character,and include uppercase and lowercase,number and a special character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_org_info">OrgInfo</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
</resources>