<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- LottieAnimationView as background -->
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".SignUpActivity">

        <!-- Your content goes here -->

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical">

               <com.airbnb.lottie.LottieAnimationView
                   android:layout_width="1500dp"
                   android:layout_height="150dp"
                   android:layout_gravity="center_horizontal"
                   app:lottie_rawRes="@raw/planet"
                   app:lottie_loop="true"
                  app:lottie_autoPlay="true"
                   />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="VOLENTEER"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="25sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:text="SIGN UP"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="10dp"
                        android:ems="10"
                        android:inputType="text"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="textEmailAddress"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_phone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="phone"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/joblist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/spinner_border"
                    android:ems="10"
                    android:hint="Job List"
                    app:boxStrokeColor="#877878"
                    android:textColorHint="#FFFFFF"
                    app:hintEnabled="true"
                    app:hintTextColor="#FFFFFF">

                    <Spinner
                        android:id="@+id/spinneJoblist"
                        style="@style/SpinnerStyle"

                        android:visibility="visible" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Age">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editTextAge"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="number"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:endIconMode="password_toggle"
                    android:hint="@string/form_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="textPassword"
                        android:textColor="#FFFFFF" />

                </com.google.android.material.textfield.TextInputLayout>
                <!-- Gender Selection -->
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">

                    <RadioButton
                        android:id="@+id/radioMale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="60dp"
                        android:layout_marginLeft="50dp"
                        android:layout_marginEnd="50dp"
                        android:buttonTint="@android:color/white"
                        android:checked="true"
                        android:text="Male"
                        android:textColor="@android:color/white"
                        android:textColorHighlight="#FF9800"
                        app:useMaterialThemeColors="false" /> <!-- Add margin to the end (right side) -->

                    <RadioButton
                        android:id="@+id/radioFemale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginRight="50dp"
                        android:buttonTint="@android:color/white"
                        android:text="Female"
                        android:textColor="@android:color/white"
                        android:textColorHighlight="#FFC30E" /> <!-- Add margin to the start (left side) -->
                </RadioGroup>

                <Button
                    android:id="@+id/buttonSign"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorWhite"
                    android:text="Sign Up" />

                <TextView
                    android:id="@+id/already_signin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:textColor="@color/colorWhite"
                    android:textAlignment="center"
                    android:text="@string/already_member"/>

            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</RelativeLayout>
